--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   image_picker: ^0.8.5+3
   permission_handler: ^10.0.1
   photo_view: ^0.14.0
+  connectivity_plus: ^2.3.7
 
 dev_dependencies:
   flutter_test:
